# cv-writer-agent

./: .gitignore  README.md  new_cv.tex  output.md  pyproject.toml
resumes_repo/: sample_resume.tex
src/: main.py  scrape.py  tools.py  tutorial.py
